kustomize/base/webui/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: webui
  namespace: mentr
  labels:
    app: webui
spec:
  selector:
    app: webui
  ports:
    - name: http
      port: 8080
      targetPort: http
